# video-viewer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
cmake/: version.cmake
dep/: keyboard.cpp  keyboard.h
include/videoviewer/: videoviewer.hpp
sample/: CMakeLists.txt  colorbar.cpp  colorbar.hpp  main.cpp
src/: CMakeLists.txt  README.md  bgr4444_8_to_rgb4444.shader  bgr444_8_to_rgb4444.shader  fragment.shader  rgb444_8_to_rgb4444.shader  shader.cpp  shader.hpp  vertex.shader  videoviewer.cpp  videoviewer_internal.cpp  videoviewer_internal.hpp  ycbcr422_10_be_to_rgb444.shader  ycbcr422_10_le_msb_to_rgb444.shader  ycbcr422_8_to_rgb444.shader  ycbcr444_8_to_rgb444.shader
src/shaders/: bgr444_8_to_rgb4444.glsl  bgr_444_8_le_msb_to_rgb_4444.glsl  bgr_444_8_to_rgb_4444.glsl  flip_vertices.glsl  nv12_to_rgb_4444.glsl  render.glsl  rgb444_8_to_rgb4444.glsl  rgb_444_8_to_rgb_4444.glsl  simple_vertices.glsl  vertices.glsl  ycbcr_422_10_be_to_rgb_4444.glsl  ycbcr_422_10_le_msb_to_rgb_4444.glsl  ycbcr_422_8_to_rgb_4444.glsl  ycbcr_444_8_to_rgb_4444.glsl  yuv420_semiplanar_to_rgb_4444.glsl
tests/: CMakeLists.txt  test_colorbar.cpp
